Closed Bug 1911231 Opened 1 year ago Closed 1 year ago

[GPU-Canvas] Dwitter demo (https://beta.dwitter.net/d/32153) doesnt render anything on screen (but continues to use CPU/GPU)

Categories

(Core :: Graphics: Canvas2D, defect)

defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox-esr115 --- disabled
firefox-esr128 --- disabled
firefox129 --- disabled
firefox130 --- fixed

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Regression, )

Details

(Keywords: regression)

Attachments

(3 files)

Blocks: 1910138

Gets fixed if you set both:
gfx.direct2d.disabled = False
gfx.canvas.accelerated = False

Regressed by: 1828137
No longer regressed by: 1828931
Flags: needinfo?(sotaro.ikeda.g)
Flags: needinfo?(lsalzman)

We can avoid falling back to Skia on certain fill/clear ops so long as
the transform produces axis-aligned rectangles. In that case, we can
do a precise clip of the transformed rect to the viewport, which can
then be accelerated without any risk of fallback.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5e74addf2af7 Clip fill/clear ops to viewport when possible. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch

This is fixed for me on the latest Nightly.

Flags: needinfo?(sotaro.ikeda.g)
Regressions: 1925845
Regressions: 1984014
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: